Changes on dependecies

--- a/example/farmacia/src/main/java/org/oms/farmacia/applications.properties
+++ b/example/farmacia/src/main/java/org/oms/farmacia/applications.properties
@@ -1,2 +1,4 @@
 app.name=FarmaciaApp
-app.description=Aplicación de prueba para el javaday
+app.description=Aplicaci\u00c3\u00b3n de prueba para el javaday
+documentation.services.version=1.0
+documentation.services.basePath=http://localhost:8080/bookmarks
