--- a/example/farmacia/pom.xml
+++ b/example/farmacia/pom.xml
@@ -26,7 +26,15 @@
 
     </plugins>
   </build>
-  
+
+    <repositories>
+        <repository>
+            <id>oss-jfrog-artifactory</id>
+            <name>oss-jfrog-artifactory-releases</name>
+            <url>http://oss.jfrog.org/artifactory/oss-release-local</url>
+        </repository>
+    </repositories>
+
   <dependencies>
       <dependency>
           <groupId>org.springframework.boot</groupId>
@@ -61,6 +69,32 @@
         <artifactId>swagger-springmvc</artifactId>
         <version>0.5.2</version>
     </dependency>
+      <dependency>
+          <groupId>com.mangofactory</groupId>
+          <artifactId>swagger-springmvc</artifactId>
+          <version>0.8.8</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-parent</artifactId>
+          <version>1.1.8.RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-parent</artifactId>
+          <version>1.1.8.RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-parent</artifactId>
+          <version>1.1.8.RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>org.ajar</groupId>
+          <artifactId>swagger-spring-mvc-ui</artifactId>
+          <version>0.1</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
   
   <!-- Additional lines to be added here... -->
