--- a/example/farmacia/src/main/java/org/oms/farmacia/applications.properties
+++ b/example/farmacia/src/main/java/org/oms/farmacia/applications.properties
@@ -1,4 +1,5 @@
 app.name=FarmaciaApp
 app.description=Aplicaci\u00c3\u00b3n de prueba para el javaday
+app.docs=http://localhost:8080
 documentation.services.version=1.0
 documentation.services.basePath=http://localhost:8080/bookmarks
