--- a/example/farmacia/pom.xml
+++ b/example/farmacia/pom.xml
@@ -61,7 +61,11 @@
             <artifactId>swagger-springmvc</artifactId>
             <version>0.8.8</version>
         </dependency>
-  
+	<dependency>
+	  <groupId>org.jmock</groupId>
+	  <artifactId>jmock</artifactId>
+	  <version>2.8.1</version>
+	</dependency>  
     </dependencies>
   
     <!-- Additional lines to be added here... -->
